--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                                             </li>
                                             <li><a href="services.html"><span>Services</span></a>
                                             </li>
+                                            <li><a href="gallery.html"><span>Gallery</span></a>
+                                            </li>
                                             <li><a href="case-studies.html"><span>Case studies</span></a>
                                             </li>
                                             <li><a href="contact.html"><span>Contact</span></a>
@@ -231,6 +233,7 @@
                                 <div class="wrap mcb-wrap one-second valign-middle clearfix" style="padding:0 0 0 5%">
                                     <div class="mcb-wrap-inner">
                                         <div class="column mcb-column one column_column">
+                                            <h3>装修 · 餐饮 · 外贸 · 设计<br><span style="color: #2c605a;">多元化公司</span></h3>
                                             <div class="column_attr clearfix" style>
                                                 <p class="big">
                                                     Since our founding, Dels Constructor has been known for quality
@@ -245,30 +248,6 @@
                                                     learn more about our team, our company or for details about the
                                                     services we provide.
                                                 </p>
-                                            </div>
-                                        </div>
-                                        <div class="column mcb-column one-third column_column">
-                                            <div class="column_attr clearfix" style>
-                                                <h1 class="themecolor">520</h1>
-                                                <h5>Architecture
-                                                    <br /> awards
-                                                </h5>
-                                            </div>
-                                        </div>
-                                        <div class="column mcb-column one-third column_column">
-                                            <div class="column_attr clearfix" style>
-                                                <h1 class="themecolor">36</h1>
-                                                <h5>Professional
-                                                    <br /> designers
-                                                </h5>
-                                            </div>
-                                        </div>
-                                        <div class="column mcb-column one-third column_column">
-                                            <div class="column_attr clearfix" style>
-                                                <h1 class="themecolor">14</h1>
-                                                <h5>Architecture
-                                                    <br /> awards
-                                                </h5>
                                             </div>
                                         </div>
                                     </div>
