--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
                                             </li>
                                             <li><a href="services.html"><span>Services</span></a>
                                             </li>
+                                            <li><a href="gallery.html"><span>Gallery</span></a>
+                                            </li>
                                             <li><a href="case-studies.html"><span>Case studies</span></a>
                                             </li>
                                             <li><a href="contact.html"><span>Contact</span></a>
